plugins/javaFX/testData/coercing/invalidDouble.fxml
<?import javafx.scene.layout.GridPane?>
<?import javafx.scene.control.Button?>
<GridPane xmlns:fx="http://javafx.com/fxml">
    <Button prefHeight="-Infinity"/>
    <Button prefHeight=<error descr="Invalid value: unable to coerce to java.lang.Double">"xxx"</error>/>
</GridPane>
                          